<?xml version='1.0' encoding='UTF-8'?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.infinispan</groupId>
        <artifactId>infinispan-lucene-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>infinispan-lucene-directory</artifactId>
    <packaging>bundle</packaging>
    <name>Infinispan Lucene Directory Implementation</name>
    <description>A Lucene directory implementation based on Infinispan</description>

    <dependencies>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
            <version>${version.lucene}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-analyzers-common</artifactId>
            <version>${version.lucene}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging-processor</artifactId>
            <version>${version.jboss.logging.processor}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.jbossts.jta</groupId>
            <artifactId>narayana-jta</artifactId>
            <scope>test</scope>
            <version>${version.jbossjta}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${version.mockito}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.infinispan</groupId>
            <artifactId>infinispan-core</artifactId>
            <version>${version.infinispan}</version>
        </dependency>
        <dependency>
            <groupId>net.jcip</groupId>
            <artifactId>jcip-annotations</artifactId>
            <version>${version.net.jcip.annotations}</version>
        </dependency>
        <dependency>
            <groupId>org.infinispan</groupId>
            <artifactId>infinispan-core</artifactId>
            <version>${version.infinispan}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.infinispan</groupId>
            <artifactId>infinispan-cachestore-jdbc</artifactId>
            <version>${version.infinispan}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.infinispan</groupId>
            <artifactId>infinispan-cachestore-jdbc</artifactId>
            <version>${version.infinispan}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.mchange</groupId>
            <artifactId>c3p0</artifactId>
            <version>${version.c3p0}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
            <version>${version.h2.driver}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${version.testng}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <executions>
                    <execution>
                        <id>default-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <parallel>tests</parallel>
                            <threadCount>1</threadCount>
                            <forkCount>1</forkCount>
                            <reuseForks>true</reuseForks>
                            <groups>functional,unit,arquillian</groups>
                            <systemPropertyVariables>
                                <log4j.configuration>custom-lucene-log4j.xml</log4j.configuration>
                                <infinispan.test.jgroups.protocol>tcp</infinispan.test.jgroups.protocol>
                                <jgroups.bind_addr>127.0.0.1</jgroups.bind_addr>
                                <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
                                <infinispan.unsafe.allow_jdk8_chm>true</infinispan.unsafe.allow_jdk8_chm>
                            </systemPropertyVariables>
                            <excludedGroups>unstable,stress,unstable_xsite</excludedGroups>
                            <trimStackTrace>false</trimStackTrace>
                            <properties>
                                <property>
                                    <name>usedefaultlisteners</name>
                                    <value>false</value>
                                </property>
                                <property>
                                    <name>listener</name>
                                    <value>org.infinispan.test.fwk.UnitTestTestNGListener</value>
                                </property>
                            </properties>
                            <argLine>-Xmx1024m -XX:MaxPermSize=256m -Dsun.nio.ch.bugLevel</argLine>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <parallel>tests</parallel>
                    <threadCount>15</threadCount>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <groups>functional,unit,arquillian</groups>
                    <systemPropertyVariables>
                        <log4j.configuration>custom-lucene-log4j.xml</log4j.configuration>
                        <infinispan.test.jgroups.protocol>tcp</infinispan.test.jgroups.protocol>
                        <jgroups.bind_addr>127.0.0.1</jgroups.bind_addr>
                        <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
                        <infinispan.unsafe.allow_jdk8_chm>true</infinispan.unsafe.allow_jdk8_chm>
                        <build.directory>/home/gfernandes/code/infinispan/upstream/lucene/lucene-directory/target</build.directory>
                        <infinispan.module-name>infinispan-lucene-directory</infinispan.module-name>
                    </systemPropertyVariables>
                    <excludedGroups>unstable,stress,unstable_xsite</excludedGroups>
                    <trimStackTrace>false</trimStackTrace>
                    <properties>
                        <property>
                            <name>usedefaultlisteners</name>
                            <value>false</value>
                        </property>
                        <property>
                            <name>listener</name>
                            <value>org.infinispan.test.fwk.UnitTestTestNGListener</value>
                        </property>
                    </properties>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m -Dsun.nio.ch.bugLevel</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>build-test-jar</id>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Export-Package>
                            ${project.groupId}.lucene.*;version=${project.version};-split-package:=error
                        </Export-Package>
                        <Include-Resource>
                            META-INF/services/org.infinispan.lifecycle.ModuleLifecycle=target/classes/META-INF/services/org.infinispan.lifecycle.ModuleLifecycle
                        </Include-Resource>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
